Fixing layout issues

--- a/responsive_design/02-1-styles.css
+++ b/responsive_design/02-1-styles.css
@@ -177,6 +177,11 @@
     white-space: nowrap;
   }
 
+  main img {
+    width: 100%;
+    height: auto;
+  }
+
   /*** 2. LAYOUT ***/
 
   /* Layout
@@ -211,6 +216,23 @@
 
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+
+  @media (max-width: 767px) {
+    :root {
+        --section-padding: 5rem 1.5rem;
+        --section-body-padding: 2rem 0 0;
+    }
+    ul.row .row {
+        flex-direction: column;
+        margin: 0;
+    }
+    [class*='col-'] {
+        margin: 0 0 3rem 0;
+    }
+    .col-1-2, .col-1-3 {
+        width: 100%;
+    }
   }
 
   /* Navbar
@@ -260,6 +282,12 @@
   .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+  }
+
+  @media (max-width: 767px) {
+    .navbar-menu {
+        display: none;
+    }
   }
 
   /* Header
@@ -398,6 +426,12 @@
 
   .section-latest-news .row {
     flex-direction: row-reverse;
+  }
+
+  @media (max-width: 767px) {
+    .section-latest-news .row {
+        flex-direction: column;
+    }
   }
 
   /* Section SERVICES
